--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.1.1",
     "axios": "^1.6.8",
+    "axios-auth-refresh": "^3.3.6",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
